# superconductivity

./: .gitignore  .pylintrc  AGENTS.md  README.md  muster_evaluation.ipynb  pipeline_test.ipynb  pyproject.toml  rsj.py  rsj_jax.py  test models.ipynb  test optimizers.ipynb  test_gui.ipynb
models/: abs-rsj.ipynb  abs.py  bcs.py  bcs_jnp.py  bcs_np.py  btk.py  fcs.py  fcs_pbar.py  ha_asym.py  ha_sym.py  ns.py  pat_jax.py  rsj.py  rsj_jax.py  shapiro.py  tg.py  utg.py
old/: tg.py
optimizers/: fit_atomic_contact.py  fit_atomic_contact_plotter.py  fit_atomic_contacts_helper.py  fit_pat.py  fit_pincode.py  fit_pincode_helper.py  jax_functions.py  models.py  optimizers.py  pincode_database.ipynb  show_fitting.py  test_fit.ipynb
sonst/: README.md  corporate_design_colors_v4.py  cpd dev.ipynb  pincodefit.py
superconductivity/: __init__.py  api.py
superconductivity-test/: abs-rsj.ipynb  test convolution.ipynb  test models.ipynb  test optimizers.ipynb
swing/: Duke Ellington - It don_t mean a thing (1943).m4a  swing.ipynb  swing.py
tests/: pincode_database.ipynb  test models.ipynb  test optimizers.ipynb  test_atomic_contact_ha_sym.py  test_axis.py  test_bcs_adaptive.py  test_bcs_gap_distribution.py  test_bcs_model.py  test_bcs_noise.py  test_binning.py  test_dataset.py  test_fill_nans.py  test_fit_model.py  test_fit_pats.py  test_ha_new.py  test_mar_btk.py  test_mar_cache.py  test_mar_dispatch.py  test_mar_fcs.py  test_mar_fcs_backend.py  test_mar_ha_asym.py  test_model_basics.py  test_optimizer_model_registry.py  test_pat_models.py  test_project_cache.py  (+3 more)
(+857 files in other folders)
